add_subdirectory(search2darray)
add_subdirectory(replaceSpace)
add_subdirectory(reverse_print_list)
add_subdirectory(treeReconst)
add_subdirectory(queue_from_2stacks)
add_subdirectory(rotatedArray)
add_subdirectory(fibonacci)
add_subdirectory(exponent)
add_subdirectory(oddeven)
add_subdirectory(last_kth)
add_subdirectory(list_reverse)
add_subdirectory(list_merge)
add_subdirectory(str2float)
